--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,3 +13,5 @@ bytes = "0.4.10"
 tokio-timer = "0.2"
 tokio = "0.1.11"
 uuid = { version = "0.7", features = ["v4"] }
+serde = "1.0.79"
+serde_derive = "1.0.79"
