--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ futures = "0.1.24"
 
 actix = "0.7"
 actix-web = "0.7"
+actix-web-httpauth = "0.1"
 bytes = "0.4.10"
 tokio-timer = "0.2"
 tokio = "0.1.11"
@@ -16,3 +17,4 @@ uuid = { version = "0.7", features = ["v4"] }
 serde = "1.0.79"
 serde_derive = "1.0.79"
 log = "0.4"
+jsonwebtoken = "5.0"
